Implemented searching with usda api

--- a/search.html
+++ b/search.html
@@ -33,10 +33,21 @@
     <h1>Search for food:</h1>
     <div>
 
-      <form class="form-inline ml-auto">
-          <input type="text" class="form-control mr-sm-2" placeholder="Search">
-          <button type="submit" class="btn btn-outline-light">Search</button>
-      </form>
+    <div>
+    <form class="form-inline mr-auto" onsubmit="search()">
+        <input id="searchBar" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success btn-rounded btn-sm my-0" type="submit">Search</button>
+    </form>
+    </div>
+
+    <div class="container">
+        <table id="table" class="hidden" data-height="460">
+        <thead>
+            <tr>
+                <th data-field="description">Food</th>
+            </tr>
+        </thead>
+    </table>
 
 
 
@@ -49,6 +60,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="./js/search.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </body>
 </html>
