--- a/search.html
+++ b/search.html
@@ -34,7 +34,7 @@
     <div>
 
     <div>
-    <form class="form-inline mr-auto" onsubmit="search()">
+    <form class="form-inline mr-auto" action="#" onsubmit="search()">
         <input id="searchBar" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success btn-rounded btn-sm my-0" type="submit">Search</button>
     </form>
