--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <div class="navbar-nav">
             <a href="home.html" class="nav-item nav-link active">Home</a>
             <a href="search.html" class="nav-item nav-link">Search Food</a>
-            <a href="#" class="nav-item nav-link">Messages</a>
+            <a href="profile.html" class="nav-item nav-link">Profile</a>
             <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
         </div>
         <div class="navbar-nav ml-auto">
@@ -29,9 +29,33 @@
 </nav>
 
 <body>
+    <div class="bs-example">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>Nutients</th>
+                <th>Intakes</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Calories</td>
+                <td>Column two</td>
+            </tr>
+            <tr>
+                <td>Protein</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>Fat</td>
+                <td>2</td>
+            </tr>            
+        </tbody>
+    </table>
+    </div>
     <div class="container">
     <h1>Here's your breakdown for the day so far:</h1>
-    <div>
+    </div>
 
     <div class="container">
     <!--Row with two equal columns-->
