--- a/search.html
+++ b/search.html
@@ -19,7 +19,7 @@
         <div class="navbar-nav">
             <a href="home.html" class="nav-item nav-link active">Home</a>
             <a href="search.html" class="nav-item nav-link">Search Food</a>
-            <a href="#" class="nav-item nav-link">Messages</a>
+            <a href="profile.html" class="nav-item nav-link">Profile</a>
             <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
         </div>
         <div class="navbar-nav ml-auto">
@@ -31,13 +31,13 @@
 <body>
     <div class="container">
     <h1>Search for food:</h1>
-    </div>
 
     <div>
     <form class="form-inline mr-auto" action="#" onsubmit="search()">
         <input id="searchBar" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success btn-rounded btn-sm my-0" type="submit">Search</button>
     </form>
+    </div>
     </div>
 
     <div class="container">
