--- a/profile.html
+++ b/profile.html
@@ -34,27 +34,45 @@
 </nav>
 
 <body>
-    <div class="bs-example">
-    <form action="#" method="post" onsubmit="">
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Name" required>
-        </div>
-        <div class="form-group">
-            <label for="age">Age</label>
-            <input type="text" class="form-control" id="age" placeholder="Age" required>
-        </div>
-        <div class="form-group">
-            <label for="weight">Weight</label>
-            <input type="text" class="form-control" id="weight" placeholder="Weight" required>
-        </div>
-        <div class="form-group">
-            <label for="height">Age</label>
-            <input type="text" class="form-control" id="height" placeholder="Height" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Done</button>
-    </form>
+<div class="bs-example">
+<form id="form1" action="#" method="post" onsubmit="myFunction()">
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" placeholder="Name" required>
     </div>
+    <div class="form-group">
+        <label for="age">Age</label>
+        <input type="text" class="form-control" id="age" placeholder="Age" required>
+    </div>
+    <div class="form-group">
+        <label for="weight">Weight</label>
+        <input type="text" class="form-control" id="weight" placeholder="Weight" required>
+    </div>
+    <div class="form-group">
+        <label for="height">Height</label>
+        <input type="text" class="form-control" id="height" placeholder="Height" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Done</button>
+</form>
+</div>
+
+<div class="bs-example"><p id="demo">hello</p></div>
+<script>
+    function myFunction(){
+        var name = document.getElementById('name');
+        var age = document.getElementById('age');
+        var weight = document.getElementById('weight');
+        var height = document.getElementById('height');
+        localStorage.setItem('name', name.value);
+        localStorage.setItem('age', age.value);
+        localStorage.setItem('weight', weight.value);
+        localStorage.setItem('height', height.value);
+    }
+    if (localStorage.getItem('name')){
+        var x = document.getElementById('demo');
+        x.innerHTML = "The name is: " + localStorage.getItem('name');
+    }
+</script>
 
 
 <!-- <form action="#" target="_blank" method="POST">
