--- a/profile.html
+++ b/profile.html
@@ -67,6 +67,7 @@
         localStorage.setItem('age', age.value);
         localStorage.setItem('weight', weight.value);
         localStorage.setItem('height', height.value);
+        //parseInt()
     }
     if (localStorage.getItem('name')){
         var x = document.getElementById('demo');
