Update nav bar and home page

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Basic Bootstrap Template</title>
+    <title>Nutrient Tracker Home Page</title>
     <!-- Bootstrap CSS file -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -20,7 +20,7 @@
             <a href="home.html" class="nav-item nav-link active">Home</a>
             <a href="search.html" class="nav-item nav-link">Search Food</a>
             <a href="profile.html" class="nav-item nav-link">Profile</a>
-            <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
+            <!-- <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a> -->
         </div>
         <div class="navbar-nav ml-auto">
             <a href="#" class="nav-item nav-link">Login</a>
@@ -29,18 +29,21 @@
 </nav>
 
 <body>
+    <div class="container">
+        <h1>Here's your breakdown for the day so far:</h1>
+    </div>
     <div class="bs-example">
     <table class="table table-hover">
         <thead>
             <tr>
-                <th>Nutients</th>
+                <th>Nutients/Macros</th>
                 <th>Intakes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>Calories</td>
-                <td>Column two</td>
+                <td>2</td>
             </tr>
             <tr>
                 <td>Protein</td>
@@ -49,29 +52,9 @@
             <tr>
                 <td>Fat</td>
                 <td>2</td>
-            </tr>            
+            </tr>
         </tbody>
     </table>
-    </div>
-    <div class="container">
-    <h1>Here's your breakdown for the day so far:</h1>
-    </div>
-
-    <div class="container">
-    <!--Row with two equal columns-->
-    <div class="row">
-        <div class="col">Calories</div>
-        <div class="col">Column two</div>
-    </div>
-
-    <div class="row">
-        <div class="col">Protein</div>
-        <div class="col">Column two</div>
-    </div>
-
-    <div class="row">
-        <div class="col">Fat</div>
-        <div class="col">Column two</div>
     </div>
 
 </div>
