--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Basic Bootstrap Template</title>
+    <title>Search Page</title>
     <!-- Bootstrap CSS file -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -20,7 +20,7 @@
             <a href="home.html" class="nav-item nav-link active">Home</a>
             <a href="search.html" class="nav-item nav-link">Search Food</a>
             <a href="profile.html" class="nav-item nav-link">Profile</a>
-            <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
+            <!-- <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a> -->
         </div>
         <div class="navbar-nav ml-auto">
             <a href="#" class="nav-item nav-link">Login</a>
